--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Canviar el tipus de vista</string>
     <string name="grid">Reixeta</string>
     <string name="list">Llista</string>
+    <string name="increase_column_count">Augmentar el número de columnes</string>
+    <string name="reduce_column_count">Reduir el número de columnes</string>
+    <string name="change_cover_image">Canviar imatge de portada</string>
+    <string name="select_photo">Sel·leccionar imatge</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gestiona els números bloquejats</string>
