--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Skift visning</string>
     <string name="grid">Gitter</string>
     <string name="list">Liste</string>
+    <string name="increase_column_count">Flere kolonner</string>
+    <string name="reduce_column_count">Færre kolonner</string>
+    <string name="change_cover_image">Skift cover-billede</string>
+    <string name="select_photo">Vælg billede</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrér blokerede numre</string>
