--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Vaihda näkymää</string>
     <string name="grid">Ruudukko</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Lisää sarakkeita</string>
+    <string name="reduce_column_count">Vähennä sarakkeita</string>
+    <string name="change_cover_image">Vaihda kansikuva</string>
+    <string name="select_photo">Valitse kuva</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Hallitse estettyjä numeroita</string>
