--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Promijeni vrstu prikaza</string>
     <string name="grid">Mreža</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Povećaj broj stupaca</string>
+    <string name="reduce_column_count">Smanji broj stupaca</string>
+    <string name="change_cover_image">Promjeni naslovnu sliku</string>
+    <string name="select_photo">Odaberi sliku</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Upravljanje blokiranim brojevima</string>
