--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Cambia modalità visualizzazione</string>
     <string name="grid">Griglia</string>
     <string name="list">Elenco</string>
+    <string name="increase_column_count">Aumenta numero colonne</string>
+    <string name="reduce_column_count">Riduci numero colonne</string>
+    <string name="change_cover_image">Cambia immagine copertina</string>
+    <string name="select_photo">Seleziona foto</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gestisci i numeri bloccati</string>
