--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Change view type</string>
     <string name="grid">Grid</string>
     <string name="list">List</string>
+    <string name="increase_column_count">Increase column count</string>
+    <string name="reduce_column_count">Reduce column count</string>
+    <string name="change_cover_image">Change cover image</string>
+    <string name="select_photo">Select photo</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">ניהול מספרים חסומים</string>
