--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">表示形式の変更</string>
     <string name="grid">グリッド</string>
     <string name="list">リスト</string>
+    <string name="increase_column_count">列数を増やす</string>
+    <string name="reduce_column_count">列数を減らす</string>
+    <string name="change_cover_image">カバー画像を変更</string>
+    <string name="select_photo">写真を選択</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">ブロックした番号を管理</string>
