--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Endre visningstype</string>
     <string name="grid">Rutenett</string>
     <string name="list">Liste</string>
+    <string name="increase_column_count">Øk antall kolonner</string>
+    <string name="reduce_column_count">Reduser antall kolonner</string>
+    <string name="change_cover_image">Endre omslagsbilde</string>
+    <string name="select_photo">Velg foto</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
