--- a/commons/src/main/res/values-ne/strings.xml
+++ b/commons/src/main/res/values-ne/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">भ्यू प्रकार परिवर्तन गर्नुहोस</string>
     <string name="grid">कोठे</string>
     <string name="list">सुची</string>
+    <string name="increase_column_count">कोलम सङ्खा बढाउनुहोस</string>
+    <string name="reduce_column_count">कोलम सङ्खा घटाउनुहोस</string>
+    <string name="change_cover_image">कभर तस्बिर परिवर्तन गर्नुहोस</string>
+    <string name="select_photo">फोटो चयन गर्नुहोस</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
