--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Weergave</string>
     <string name="grid">Raster</string>
     <string name="list">Lijst</string>
+    <string name="increase_column_count">Meer kolommen</string>
+    <string name="reduce_column_count">Minder kolommen</string>
+    <string name="change_cover_image">Afbeelding omslag wijzigen</string>
+    <string name="select_photo">Foto selecteren</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Geblokkeerde nummers beheren</string>
