--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Вид</string>
     <string name="grid">Сетка</string>
     <string name="list">Список</string>
+    <string name="increase_column_count">Добавить столбец</string>
+    <string name="reduce_column_count">Убрать столбец</string>
+    <string name="change_cover_image">Изменить обложку</string>
+    <string name="select_photo">Выбрать изображение</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Управление блокируемыми номерами</string>
