--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Spremeni tip pogleda</string>
     <string name="grid">Mreža</string>
     <string name="list">Seznam</string>
+    <string name="increase_column_count">Povečaj število stolpcev</string>
+    <string name="reduce_column_count">Zmanjšaj število stolpcev</string>
+    <string name="change_cover_image">Spremeni naslovno fotografijo</string>
+    <string name="select_photo">Izberi fotografijo</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
