--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Промени тип прегледа</string>
     <string name="grid">Мрежа</string>
     <string name="list">Листа</string>
+    <string name="increase_column_count">Повећај број колона</string>
+    <string name="reduce_column_count">Смањи број колона</string>
+    <string name="change_cover_image">Промени насловну слику</string>
+    <string name="select_photo">Изабери фотографију</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
