--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Görünüm türünü değiştir</string>
     <string name="grid">Izgara</string>
     <string name="list">Liste</string>
+    <string name="increase_column_count">Sütun sayısını artır</string>
+    <string name="reduce_column_count">Sütun sayısını azalt</string>
+    <string name="change_cover_image">Kapak resmini değiştir</string>
+    <string name="select_photo">Fotoğraf seç</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Engelli numaraları yönet</string>
