--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Thay đổi kiểu xem</string>
     <string name="grid">Lưới</string>
     <string name="list">Danh sách</string>
+    <string name="increase_column_count">Tăng số lượng cột</string>
+    <string name="reduce_column_count">Giảm số lượng cột</string>
+    <string name="change_cover_image">Thay đổi ảnh bìa</string>
+    <string name="select_photo">Chọn ảnh</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
