--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">改變瀏覽類型</string>
     <string name="grid">格狀</string>
     <string name="list">列表</string>
+    <string name="increase_column_count">增加欄數</string>
+    <string name="reduce_column_count">減少欄數</string>
+    <string name="change_cover_image">更換封面圖片</string>
+    <string name="select_photo">選擇相片</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">管理黑名單</string>
