--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Cambiar tipo de vista</string>
     <string name="grid">Cuadrícula</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Aumentar el número de columnas</string>
+    <string name="reduce_column_count">Reducir el número de columnas</string>
+    <string name="change_cover_image">Cambiar imagen de portada</string>
+    <string name="select_photo">Seleccionar imagen</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrar números bloqueados</string>
