--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Changer de mode d\'affichage</string>
     <string name="grid">Grille</string>
     <string name="list">Liste</string>
+    <string name="increase_column_count">Ajouter une colonne</string>
+    <string name="reduce_column_count">Supprimer une colonne</string>
+    <string name="change_cover_image">Changer l\'image du dossier</string>
+    <string name="select_photo">Choisir une image</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gérer les numéros bloqués</string>
