--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Cambiar o tipo de vista</string>
     <string name="grid">Grella</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Aumenta o número de columnas</string>
+    <string name="reduce_column_count">Reduce o número de columnas</string>
+    <string name="change_cover_image">Cambiar a imaxe de portada</string>
+    <string name="select_photo">Escolle foto</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Administrar números bloqueados</string>
