--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Nézet típus változtatása</string>
     <string name="grid">Rács</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Növelje az oszlopok számát</string>
+    <string name="reduce_column_count">Csökkentse az oszlopok számát</string>
+    <string name="change_cover_image">Borítókép változtatása</string>
+    <string name="select_photo">Válasszon fotót</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Zárolt telefonszámok kezelése</string>
