--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Ubah tampilan</string>
     <string name="grid">Kotak</string>
     <string name="list">Daftar</string>
+    <string name="increase_column_count">Tambah jumlah kolom</string>
+    <string name="reduce_column_count">Kurangi jumlah kolom</string>
+    <string name="change_cover_image">Ubah gambar kover</string>
+    <string name="select_photo">Pilih foto</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Kelola nomor yang diblokir</string>
