--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">보기 방식 변경</string>
     <string name="grid">타일</string>
     <string name="list">목록</string>
+    <string name="increase_column_count">섬네일크기 축소</string>
+    <string name="reduce_column_count">섬네일크기 확대</string>
+    <string name="change_cover_image">커버 사진 변경</string>
+    <string name="select_photo">사진 선택</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Manage blocked numbers</string>
