--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Keisti peržiūros tipą</string>
     <string name="grid">Tinklelis</string>
     <string name="list">Sąrašas</string>
+    <string name="increase_column_count">Padidinti stulpelių skaičių</string>
+    <string name="reduce_column_count">Sumažinti stulpelių skaičių</string>
+    <string name="change_cover_image">Pakeisti viršelio atvaizdą</string>
+    <string name="select_photo">Pasirinkti nuotrauką</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Tvarkyti blokuojamus numerius</string>
