--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Alterar modo de visualização</string>
     <string name="grid">Grade</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Aumentar número de colunas</string>
+    <string name="reduce_column_count">Reduzir número de colunas</string>
+    <string name="change_cover_image">Trocar imagem de capa</string>
+    <string name="select_photo">Selecionar foto</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gerenciar números bloqueados</string>
