--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">Tipo de exibição</string>
     <string name="grid">Grelha</string>
     <string name="list">Lista</string>
+    <string name="increase_column_count">Aumentar número de colunas</string>
+    <string name="reduce_column_count">Diminuir número de colunas</string>
+    <string name="change_cover_image">Alterar imagem de capa</string>
+    <string name="select_photo">Selecionar foto</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">Gerir números bloqueados</string>
