--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -39,6 +39,10 @@
     <string name="change_view_type">更改视图类型</string>
     <string name="grid">网格</string>
     <string name="list">列表</string>
+    <string name="increase_column_count">显示更多项目</string>
+    <string name="reduce_column_count">显示更少项目</string>
+    <string name="change_cover_image">更换封面图片</string>
+    <string name="select_photo">选择图片</string>
 
     <!-- Blocked numbers -->
     <string name="manage_blocked_numbers">管理黑名单</string>
