--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Ez da baliozko aplikaziorik aurkitu</string>
     <string name="set_as">Ezarri honela...</string>
     <string name="copy_to_clipboard">Kopiatu arbelera</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Balioa arbelera kopiatu da</string>
     <string name="unknown">Ezezaguna</string>
     <string name="always">Beti</string>
