--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Aucune application disponible</string>
     <string name="set_as">Définir en tant que</string>
     <string name="copy_to_clipboard">Copier dans le presse-papier</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
     <string name="unknown">Inconnu</string>
     <string name="always">Toujours</string>
