--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">לא נמצאה אפליקציה מתאימה</string>
     <string name="set_as">קבע כ</string>
     <string name="copy_to_clipboard">העתקה לקליפבורד</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">הועתק לקליפבורד</string>
     <string name="unknown">לא ידוע</string>
     <string name="always">תמיד</string>
