--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Nerasta tinkamos programėlės</string>
     <string name="set_as">Nustatyti kaip</string>
     <string name="copy_to_clipboard">Kopijuoti į iškarpinę</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Reikšmė nukopijuota į iškarpinė</string>
     <string name="unknown">Nežinoma</string>
     <string name="always">Visada</string>
