--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Không tìm thấy ứng dụng hợp lệ</string>
     <string name="set_as">Đặt làm...</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Giá trị được sao chép vào clipboard</string>
     <string name="unknown">Không xác định</string>
     <string name="always">Luôn luôn</string>
