--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">No s\'ha trobat una aplicació vàlida</string>
     <string name="set_as">Establir com</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Valor copiat al portaretalls</string>
     <string name="unknown">Desconegut</string>
     <string name="always">Sempre</string>
