--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Non se atopou un aplicativo válido</string>
     <string name="set_as">Establecer como</string>
     <string name="copy_to_clipboard">Copiar ao portapapeis</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Valor copiado no portapapeis</string>
     <string name="unknown">Descoñecido</string>
     <string name="always">Sempre</string>
