--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -11,6 +11,7 @@
     <string name="no_app_found">Tidak ada aplikasi yang sesuai</string>
     <string name="set_as">Setel sebagai</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
+    <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Nilai disalin ke papan klip</string>
     <string name="unknown">Tidak diketahui</string>
     <string name="always">Selalu</string>
