adding a new string for dialing number

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">تم نسخ القيمة إلي الحافظة</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">غير معروف</string>
     <string name="always">دائماً</string>
     <string name="never">أبداً</string>
