--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Hodnota byla vložena do schránky</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Neznámý</string>
     <string name="always">Vždy</string>
     <string name="never">Nikdy</string>
