--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Kopier til udklipsholder</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Værdi kopieret til udklipsholder</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Ukendt</string>
     <string name="always">Altid</string>
     <string name="never">Aldrig</string>
