--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">In die Zwischenablage kopieren</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Wert in Zwischenablage kopiert</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Unbekannt</string>
     <string name="always">Immer</string>
     <string name="never">Nie</string>
