--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Αντιγραφή στο Πρόχειρο</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Η τιμή αντιγράφηκε στο πρόχειρο</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Άγνωστο</string>
     <string name="always">Πάντα</string>
     <string name="never">Ποτέ</string>
