--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Kopioi leikepöydälle</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Kopioitu leikepöydälle</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Tuntematon</string>
     <string name="always">Aina</string>
     <string name="never">Ei koskaan</string>
