--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Vrijednost spremljena u međuspremnik</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Nepoznato</string>
     <string name="always">Uvijek</string>
     <string name="never">Nikad</string>
