--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Nilai disalin ke papan klip</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Tidak diketahui</string>
     <string name="always">Selalu</string>
     <string name="never">Jangan pernah</string>
