--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copia negli appunti</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Valore copiato negli appunti</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Sconosciuto</string>
     <string name="always">Sempre</string>
     <string name="never">Mai</string>
