--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">値をクリップボードにコピーしました</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">不明</string>
     <string name="always">常に</string>
     <string name="never">何もしない</string>
