--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Naar klembord kopiëren</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Gekopieerd naar klembord</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Onbekend</string>
     <string name="always">Altijd</string>
     <string name="never">Nooit</string>
