--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Kopiuj do schowka</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Wartość została skopiowana do schowka</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Nieznane</string>
     <string name="always">Zawsze</string>
     <string name="never">Nigdy</string>
