--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">复制到剪贴板</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">颜色值已复制到剪贴板</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">未知</string>
     <string name="always">总是</string>
     <string name="never">从不</string>
