--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">數值複製到剪貼簿</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">未知的</string>
     <string name="always">總是</string>
     <string name="never">從不</string>
