--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Miqdar panelə kopyalandı</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Bilinməyən</string>
     <string name="always">Həmişə</string>
     <string name="never">Heç vaxt</string>
