--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Valor copiat al portaretalls</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Desconegut</string>
     <string name="always">Sempre</string>
     <string name="never">Mai</string>
