--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Copïwyd y gwerth i\'r clipfwrdd</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Anhysbys</string>
     <string name="always">Pob tro</string>
     <string name="never">Byth</string>
