--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copier dans le presse-papier</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Valeur copiée dans le presse-papier</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Inconnu</string>
     <string name="always">Toujours</string>
     <string name="never">Jamais</string>
