--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">העתקה לקליפבורד</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">הועתק לקליפבורד</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">לא ידוע</string>
     <string name="always">תמיד</string>
     <string name="never">לעולם לא</string>
