--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">클립보드에 복사됨</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">알 수 없음</string>
     <string name="always">항상</string>
     <string name="never">사용 안함</string>
