--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Kopijuoti į iškarpinę</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Reikšmė nukopijuota į iškarpinė</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Nežinoma</string>
     <string name="always">Visada</string>
     <string name="never">Niekada</string>
