--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Verdi kopiert til utklippstavle</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Ukjent</string>
     <string name="always">Alltid</string>
     <string name="never">Aldri</string>
