--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Skopírovať do schránky</string>
     <string name="copy_number_to_clipboard">Skopírovať číslo do schránky</string>
     <string name="value_copied_to_clipboard">Hodnota bola vložená do schránky</string>
+    <string name="dial_number">Vytočiť číslo</string>
     <string name="unknown">Neznámy</string>
     <string name="always">Vždy</string>
     <string name="never">Nikdy</string>
