--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Vrednost kopirana v odložišče</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Neznano</string>
     <string name="always">Vedno</string>
     <string name="never">Nikoli</string>
