--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Değer panoya kopyalandı</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Bilinmeyen</string>
     <string name="always">Her zaman</string>
     <string name="never">Asla</string>
