--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -13,6 +13,7 @@
     <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="copy_number_to_clipboard">Copy number to clipboard</string>
     <string name="value_copied_to_clipboard">Значення скопійовано у буфер обміну</string>
+    <string name="dial_number">Dial number</string>
     <string name="unknown">Невідомо</string>
     <string name="always">Завжди</string>
     <string name="never">Ніколи</string>
